<?xml version="1.0"?>
<package format="2">
  <name>rslidar_to_livox</name>
  <version>0.0.1</version>
  <description>Convert RSLiDAR PointCloud2 to Livox custom point cloud format</description>
  <maintainer email="youremail@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>livox_ros_driver</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>livox_ros_driver</exec_depend>

  <export></export>
</package>
